More visiblity for selected row. Fix #280

--- a/data/application.css
+++ b/data/application.css
@@ -8,7 +8,7 @@ GtkTreeView {
 }
 
 GtkTreeView:selected {
-    background-color: @theme_bg_color;
+    background-color: shade(@theme_bg_color, 0.95);
     color: @theme_fg_color;
 }
 
